# MazeGame

./: CONTRIBUTING.md  MazeGame.sln
C++ MazeGame/: Game.cpp
MazeGame/: CMakeLists.txt  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Exit.cpp  Exit.h  Game.cpp  Game.h  GameObject.cpp  GameState.h  Item.cpp  Item.h  ItemManager.cpp  ItemManager.h  Key.cpp  Key.h  Map.cpp  Map.h  MazeGame.vcxproj  MazeGame.vcxproj.filters  Player.cpp  Potion.cpp  UI.cpp
MazeGame/include/: Game.h  gamemanager.h  graphics.h  utils.h
MazeGame/include/component/: AudioManager.h  Camera.h  ItemManager.h  SceneManager.h  Sprite.h  UI.h
MazeGame/include/object/: Coin.h  Exit.h  GameObject.h  Item.h  Player.h  Potion.h
MazeGame/include/scene/: Scene.h  StartScene.h  StoryScene.h  TutorialScene.h
MazeGame/resources/maps/: level1.txt
MazeGame/src/: Game.cpp  graphics.cpp  main.cpp
MazeGame/src/component/: AudioManager.cpp  CMakeLists.txt  Camera.cpp  ItemManager.cpp  SceneManagerGlobals.cpp  Sprite.cpp  UI.cpp
MazeGame/src/object/: CMakeLists.txt  Coin.cpp  Enemy.cpp  Exit.cpp  GameObject.cpp  Item.cpp  Key.cpp  Player.cpp  Potion.cpp
MazeGame/src/scene/: CMakeLists.txt  Map.cpp  StartScene.cpp  StoryScene.cpp  TutorialScene.cpp
